--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,6 +40,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Faruma";
+  src: url("./assets/fonts/Faruma.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif, Anaheim;
     line-height: 1.5;
